<?xml version="1.0"?>
<package format="2">
  <name>wolf_gazebo_interface</name>
  <version>0.0.1</version>
  <description>Gazebo hardware interface for WoLF</description>
  <maintainer email="gennaro.raiola@gmail.com">TODO</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>transmission_interface</depend>
  <depend>hardware_interface</depend>
  <depend>wolf_hardware_interface</depend>
  <depend>urdf</depend>
  <depend>realtime_tools</depend>

  <export>
        <gazebo_ros_control plugin="${prefix}/wolf_hw_sim_plugins.xml"/>
  </export>

</package>
