<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wolf_gazebo_interface</name>
  <version>0.0.1</version>
  <description>Gazebo hardware interface for WoLF</description>
  <maintainer email="gennaro.raiola@gmail.com">graiola</maintainer>
  <author>Gennaro Raiola</author>

  <license>GNU General Public License v3.0</license>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend condition="$ROS_VERSION == 2">gazebo_ros2_control</depend>
  <depend condition="$ROS_VERSION == 1">gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>transmission_interface</depend>
  <depend>hardware_interface</depend>
  <depend>wolf_hardware_interface</depend>
  <depend>wolf_controller_utils</depend>
  <depend>realtime_tools</depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <gazebo_ros_control plugin="${prefix}/wolf_hw_sim_plugins.xml"/>
  </export>

</package>
